--- a/Tsme/WebContent/WEB-INF/classes/jdbc.properties
+++ b/Tsme/WebContent/WEB-INF/classes/jdbc.properties
@@ -1,7 +1,7 @@
 db.driverClass=com.mysql.jdbc.Driver
 
-db.url=jdbc:mysql://localhost:3306/tsme
+db.url=jdbc:mysql://55cdba4026427.sh.cdb.myqcloud.com:3566/tsme
 
 db.username=root
 
-db.password=123456
+db.password=rl189020
